--- a/main.tex
+++ b/main.tex
@@ -46,9 +46,6 @@
 % Disable the empty pages automatically put by memoir class, except the ones by \cleardoublepage
 % \PassOptionsToClass{openany}{memoir}
 
-% Fixes several `abntex2` class problems
-\input{setup/setup.tex}
-
 % The UFSC font size is 10.5, but memoir embedded by `abntex2` only accepts 10 and 11pt.
 % However, problem will be fixed the `ufscthesisx` package.
 \documentclass[
@@ -59,13 +56,7 @@ a5paper,       % Padrão UFSC para versão final
 twoside,       % Impressão nos dois lados da folha
 chapter=TITLE, % Título de capítulos em caixa alta
 section=TITLE, % Título de seções em caixa alta
-]{abntex2}
-
-% Load the UFSC thesis package
-\usepackage{setup/ufscthesisx}
-
-% Load extra commands for tables, lists, summaries, etc.
-\input{setup/utilities.tex}
+]{setup/ufscthesisx}
 
 % % Utilize o arquivo aftertext/references.bib para incluir sua bibliografia.
 \addbibresource{aftertext/references.bib}
