Fix cover by @lucaspetry https://github.com/UFSC/ufscthesisx/pull/16
Mudança para formato A4 #14
fix https://github.com/UFSC/ufscthesisx/issues/14

Reestruturação da capa de acordo com as normas da UFSC #15
fix https://github.com/UFSC/ufscthesisx/issues/15

https://repositorio.ufsc.br/bitstream/handle/123456789/180829/TrabalhoAcademico_A4_15-07-2019.pdf?sequence=3&isAllowed=y

--- a/main.tex
+++ b/main.tex
@@ -50,9 +50,8 @@
 % However, problem will be fixed the `ufscthesisx` package.
 \documentclass[
 10pt,          % Padrão UFSC para versão final
-a5paper,       % Padrão UFSC para versão final
+a4paper,       % Padrão UFSC para versão final
 % 12pt,        % Pode usar tamanho 12pt para defesa
-% a4paper,     % Pode usar a4 para defesa
 twoside,       % Impressão nos dois lados da folha
 chapter=TITLE, % Título de capítulos em caixa alta
 section=TITLE, % Título de seções em caixa alta
@@ -108,6 +107,12 @@ section=TITLE, % Título de seções em caixa alta
 \centro{\lang
     {Department of XXXXXX, Center of XXXXXX}
     {Departamento de XXXXXX, Centro de XXXXXX}%
+}
+
+% FIXME: Preencha com Campus de XXXXXX   ou   Centro de XXXXXX
+\campus{\lang
+    {Campus/Center of XXXXXX}
+    {Campus/Centro de XXXXXX}%
 }
 
 % FIXME: Data da sua defesa
