--- a/beforetext/beforetext.tex
+++ b/beforetext/beforetext.tex
@@ -8,11 +8,39 @@
 % ELEMENTOS PRÉ-TEXTUAIS
 \ifforcedinclude\else
     % pretextual settings
-    \pretextual\PRIVATEbookmarkthis{\covername}
+    \PRIVATEbookmarkthis{Capa}
+    \addtotextpreliminarycontent{Capa}
+    \pretextual
 
     % Capa
     % \includepdf{pictures/FrenteCapaUFSC.pdf}
+    % https://tex.stackexchange.com/questions/227711/blank-page-after-titlingpage
+    \advisor{}{\AtBeginShipoutNext{\AtBeginShipoutNext{\AtBeginShipoutDiscard}}}
     \imprimircapa
+
+    % Custom list throw LaTeX Error: Command \mycustomfiction already defined?
+    % https://tex.stackexchange.com/questions/388489/custom-list-throw-latex-error-command-mycustomfiction-already-defined/
+    \advisor{}{%
+        \ifforcedinclude\else
+            % Manually add the `\textpreliminarycontents` to the Table of Contents here
+            % to keep the hyper link pointing to the beginning of the page, instead of
+            % the beginning of `\textpreliminarycontents`
+
+            % When do I need to invoke \phantomsection?
+            % https://tex.stackexchange.com/questions/44088/when-do-i-need-to-invoke-phantomsection
+            \phantomsection
+            \addcontentsline{toc}{chapter}{\mytextpreliminarylistname}
+
+            \begin{KeepFromToc}
+                \textpreliminarycontents
+            \end{KeepFromToc}
+
+            \ifforcedinclude\else\clearpage\fi
+        \fi
+    }
+
+    \PRIVATEbookmarkthis{Contracapa}
+    \addtotextpreliminarycontent{Contracapa}
 
     % Folha de rosto (o * indica que haverá a ficha bibliográfica)
     \imprimirfolhaderosto*
@@ -26,25 +54,12 @@
 % com a ficha catalográfica definitiva após a defesa do trabalho. Quando estiver
 % com o documento, salve-o como PDF no diretório do seu projeto e substitua todo
 % o conteúdo de implementação deste arquivo pelo comando abaixo:
+\PRIVATEbookmarkthis{Ficha Catalográfica}
+\addtotextpreliminarycontent{Ficha Catalográfica}
+
 \include{beforetext/fichacatalografica}
 \ifforcedinclude\else\cleardoublepage\fi
 
-% Custom list throw LaTeX Error: Command \mycustomfiction already defined?
-% https://tex.stackexchange.com/questions/388489/custom-list-throw-latex-error-command-mycustomfiction-already-defined/
-% \ifforcedinclude\else
-    % Manually add the `\textpreliminarycontents` to the Table of Contents here
-    % to keep the hyper link pointing to the beginning of the page, instead of
-    % the beginning of `\textpreliminarycontents`
-    %
-    % When do I need to invoke \phantomsection?
-    % https://tex.stackexchange.com/questions/44088/when-do-i-need-to-invoke-phantomsection
-    % \phantomsection
-    % \addcontentsline{toc}{chapter}{\mytextpreliminarylistname}
-
-    % \begin{KeepFromToc}
-        % \textpreliminarycontents
-    % \end{KeepFromToc}
-% \fi
 
 % Inserir errata
 
@@ -113,12 +128,10 @@
 \ifforcedinclude\else\cleardoublepage\fi
 \include{beforetext/simbolos}
 
-% Add the table of contents to the brief table of contents
-\addtotextpreliminarycontent{\contentsname}
-
 % How to remove the self-reference of the ToC from the ToC?
 % https://tex.stackexchange.com/questions/10943/how-to-remove-the-self-reference-of-the-toc-from-the-toc
 \ifforcedinclude\else\cleardoublepage\fi
+
 \begin{KeepFromToc}
     \pdfbookmark[0]{\contentsname}{toc}
 
@@ -150,8 +163,11 @@
         % https://tex.stackexchange.com/questions/179506/disable-colorlinks-locally-or-just-for-the-toc
         \hypersetup{hidelinks}
 
+        % Add the table of contents to the brief table of contents
+        \addtotextpreliminarycontent{\contentsname}
         \tableofcontents
     }
+
 \end{KeepFromToc}
 
 
