--- a/beforetext/folhadeaprovacao.tex
+++ b/beforetext/folhadeaprovacao.tex
@@ -20,7 +20,7 @@
             }
             {
                 Este(a) \imprimirtipotrabalho~foi julgado adequado(a) para obtenção do Título de \imprimirformacao,
-                \ifnotempty{\imprimirarea}{na área de concentração \imprimirarea,}
+                \ifnotempty{\imprimirarea}{na área de concentração de \imprimirarea,}
                 e foi aprovado em sua forma final pelo \imprimirprograma~
                 do \imprimircentro~da \imprimirinstituicao.
             }
@@ -54,22 +54,22 @@
     }
 
     \assinatura{%
-        \textbf{Prof. Convidado 1} \\
+        \textbf{Prof. Convidado 1, \lang{PhD.}{Dr.}} \\
         Instituição 1 -- Sigla 1
     }
 
     \assinatura{%
-        \textbf{Prof. Convidado 2} \\
+        \textbf{Prof. Convidado 2, \lang{PhD.}{Dr.}} \\
         Instituição 2 -- Sigla 2
     }
 
     \assinatura{%
-        \textbf{Prof. Convidado 3} \\
+        \textbf{Prof. Convidado 3, \lang{PhD.}{Dr.}} \\
         Instituição 3 -- Sigla 3
     }
 
     \assinatura{%
-        \textbf{Prof. Convidado 4} \\
+        \textbf{Prof. Convidado 4, \lang{PhD.}{Dr.}} \\
         Instituição 4 -- Sigla 4
     }
 
