Fixed references.bib using close brace } after a ~ tilde active
character

--- a/aftertext/references.bib
+++ b/aftertext/references.bib
@@ -199,7 +199,7 @@
 @manual{NBR14724:2011,
     Address = {Rio de Janeiro},
     Month = {03},
-    Note = {Substitui a Ref.{~}\textcite{NBR14724:2005}},
+    Note = {Substitui a Ref.~\textcite{NBR14724:2005}},
     Org-Short = {ABNT},
     Organization = {Associação Brasileira de Normas Técnicas},
     Pages = 15,
