--- a/main.tex
+++ b/main.tex
@@ -143,16 +143,18 @@ section=TITLE, % Título de seções em caixa alta
 
 % Allows you to use ~= instead of `\hyp{}`
 % https://tex.stackexchange.com/questions/488008/how-to-create-an-alternative-to-shortcut-or-hyp
+% https://tex.stackexchange.com/questions/405718/depending-on-babel-language-setting-i-get-biblatex-error-argument-of-language
+% https://tex.stackexchange.com/questions/340661/argument-of-languageactivearg-has-an-extra-i-use-includegraphics-and-r
 \useshorthands{~}\defineshorthand{~=}{\hyp{}}
 
 \palavraschaveufsc{palavraschaveingles}   {Keyword 1}
-\palavraschaveufsc{palavraschaveportugues}{Palavra Chave 1}
+\palavraschaveufsc{palavraschaveportugues}{Palavra~=Chave 1}
 
 \palavraschaveufsc{palavraschaveingles}   {Keyword 2}
-\palavraschaveufsc{palavraschaveportugues}{Palavra Chave 2}
+\palavraschaveufsc{palavraschaveportugues}{Palavra~=Chave 2}
 
 \palavraschaveufsc{palavraschaveingles}   {Keyword 3}
-\palavraschaveufsc{palavraschaveportugues}{Palavra Chave 3}
+\palavraschaveufsc{palavraschaveportugues}{Palavra~=Chave 3}
 
 
 \hypersetup
