Fixed Package hyperref Warning: Token not allowed in a PDF string
(PDFDocEncoding)

--- a/main.tex
+++ b/main.tex
@@ -163,7 +163,7 @@ section=TITLE, % Título de seções em caixa alta
     pdfcreator={LaTeX with abnTeX2 for UFSC},
     pdftitle={\imprimirtitulo},
     pdfauthor={\imprimirautor},%
-    pdfkeywords={\lang{\palavraschaveingles}{\palavraschaveportugues}},%
+    pdfkeywords={\lang{\palavraschaveinglessemitem}{\palavraschaveportuguessemitem}},%
 }
 
 % Altere o arquivo 'settings.tex' para incluir customizações de aparência da sua tese
