--- a/beforetext/fichacatalografica.tex
+++ b/beforetext/fichacatalografica.tex
@@ -44,7 +44,7 @@
                 % https://tex.stackexchange.com/questions/61811/how-to-define-inparaenum-in-the-preamble
                 \hspace{0.44cm}
                 \begin{inparaenum}
-                    \lang{\palavraschaveingles}{\palavraschaveportugues}
+                    \lang{\palavraschaveinglescomvirgula}{\palavraschaveportuguescomvirgula}
                 \end{inparaenum}
                 \begin{inparaenum}[I.]
                     \item \imprimirorientador~
