Break the thesis title into two lines

--- a/main.tex
+++ b/main.tex
@@ -76,7 +76,7 @@ section=TITLE, % Título de seções em caixa alta
 
 % FIXME: Preencha com seus dados
 \autor{\brazilword{Escreva aqui o Nome completo do Autor ou da Autora}}
-\titulo{\lang{Work Title}{Título do trabalho}}
+\titulo{\lang{Work Title\protect\\Could be break into two lines}{Título do trabalho\protect\\Pode ser Quebrado em duas linhas}}
 
 % FIXME: Se houver subtítulo, descomente a linha abaixo
 % \subtitulo{\lang{Subtitle}{Subtítulo}}
