--- a/aftertext/anexo_b.tex
+++ b/aftertext/anexo_b.tex
@@ -17,30 +17,14 @@
 % https://tex.stackexchange.com/questions/36526/multiple-language-document-babel-selectlanguage-vs-begin-endotherlanguage
 \begin{otherlanguage*}{english}
 
-\englishword{\showfont}
+\showfont
 
 1. How to display the font size in use in the final output,
 2. How to display the font size in use in the final output,
 3. How to display the font size in use in the final output,
 
 
-\section[Some encoding tests]{\englishword{\showfont}}
-
-1. How to display the font size in use in the final output,
-2. How to display the font size in use in the final output,
-3. How to display the font size in use in the final output,
-4. How to display the font size in use in the final output,
-5. How to display the font size in use in the final output,
-6. How to display the font size in use in the final output,
-
-7. How to display the font size in use in the final output,
-8. How to display the font size in use in the final output,
-9. How to display the font size in use in the final output,
-10. How to display the font size in use in the final output,
-11. How to display the font size in use in the final output,
-12. How to display the font size in use in the final output,
-
-\subsection{\englishword{\showfont}}
+\section[Some encoding tests]{\showfont}
 
 1. How to display the font size in use in the final output,
 2. How to display the font size in use in the final output,
@@ -56,7 +40,7 @@
 11. How to display the font size in use in the final output,
 12. How to display the font size in use in the final output,
 
-\subsubsection{\englishword{\showfont}}
+\subsection{\showfont}
 
 1. How to display the font size in use in the final output,
 2. How to display the font size in use in the final output,
@@ -72,7 +56,23 @@
 11. How to display the font size in use in the final output,
 12. How to display the font size in use in the final output,
 
-\subsubsubsection{\englishword{\showfont}}
+\subsubsection{\showfont}
+
+1. How to display the font size in use in the final output,
+2. How to display the font size in use in the final output,
+3. How to display the font size in use in the final output,
+4. How to display the font size in use in the final output,
+5. How to display the font size in use in the final output,
+6. How to display the font size in use in the final output,
+
+7. How to display the font size in use in the final output,
+8. How to display the font size in use in the final output,
+9. How to display the font size in use in the final output,
+10. How to display the font size in use in the final output,
+11. How to display the font size in use in the final output,
+12. How to display the font size in use in the final output,
+
+\subsubsubsection{\showfont}
 
 1. How to display the font size in use in the final output,
 2. How to display the font size in use in the final output,
