--- a/beforetext/fichacatalografica.tex
+++ b/beforetext/fichacatalografica.tex
@@ -1,5 +1,27 @@
 
 
+\ifenglish
+
+Legal Notes:
+
+There is no warranty for any part of the documented software. The authors have taken care in the
+preparation of this thesis, but make no expressed or implied warranty of any kind and assume no
+responsibility for errors or omissions. No liability is assumed for incidental or consequential
+damages in connection with or arising out of the use of the information or programs contained here.
+
+\else
+
+Notas legais:
+
+Não há garantia para qualquer parte do software documentado. Os autores tomaram cuidado na
+preparação desta tese, mas não fazem nenhuma garantia expressa ou implícita de qualquer tipo e não
+assumem qualquer responsabilidade por erros ou omissões. Não se assume qualquer responsabilidade por
+danos incidentais ou consequentes em conexão ou decorrentes do uso das informações ou programas aqui
+contidos.
+
+\fi
+
+
 % http://portalbu.ufsc.br/ficha
 % http://portal.bu.ufsc.br/servicos/ficha-de-identificacao-da-obra/
 \begin{fichacatalografica}
@@ -17,7 +39,9 @@
 
         \framebox[\textwidth]
         {
+            % https://tex.stackexchange.com/questions/369918/use-the-value-of-title-with-removed-linebreak
             \begin{minipage}{0.98\textwidth}
+            \begingroup \let\\=\space
 
                 \ttfamily
                 \imprimirautor
@@ -42,7 +66,7 @@
 
                 % https://tex.stackexchange.com/questions/54055/using-lower-case-roman-numerals-in-enumerate-lists
                 % https://tex.stackexchange.com/questions/61811/how-to-define-inparaenum-in-the-preamble
-                \hspace{0.44cm}
+                \hspace{0.5cm}
                 \begin{inparaenum}
                     \lang{\palavraschaveinglescomvirgula}{\palavraschaveportuguescomvirgula}
                 \end{inparaenum}
@@ -56,6 +80,7 @@
 
                 \hspace{7.75cm} CDU 02:141:005.7
 
+            \endgroup
             \end{minipage}
         }
 
