--- a/settings.tex
+++ b/settings.tex
@@ -86,8 +86,8 @@
 \setlength{\parskip}{\advisor{0.0cm}{0.2cm}}
 
 % Paragraph size is given by
-% Default value for UFSC 1.0cm
-\setlength{\parindent}{1.3cm}
+% Default value for UFSC 1.5cm
+% \setlength{\parindent}{1.3cm}
 
 % https://tex.stackexchange.com/questions/148647/how-to-remove-space-before-enumerate
 % https://tex.stackexchange.com/questions/433543/behaviour-of-enumitem-setlist
@@ -136,6 +136,51 @@
     }
 }{}
 \makeatother
+
+% % Muda equação para 'Equação (n)'
+% \counterwithout{equation}{chapter}
+% \def\equationautorefname~#1\null{%
+%   Equação~(#1)\null
+% }
+
+% \DeclareFieldFormat{url}{Disponível~em:\addspace\url{#1}}
+% \setlength\bibitemsep{\baselineskip}
+
+% ---
+% Filtering and Mapping Bibliographies
+% ---
+\DeclareSourcemap{
+    \maps[datatype=bibtex]{
+        % remove fields that are always useless
+        \map{
+            \step[fieldset=abstract, null]
+            \step[fieldset=pagetotal, null]
+        }
+        % remove URLs for types that are primarily printed
+%       \map{
+%           \pernottype{software}
+%           \pernottype{online}
+%           \pernottype{report}
+%           \pernottype{techreport}
+%           \pernottype{standard}
+%           \pernottype{manual}
+%           \pernottype{misc}
+%           \step[fieldset=url, null]
+%           \step[fieldset=urldate, null]
+%       }
+        \map{
+            \pertype{inproceedings}
+            % remove mostly redundant conference information
+            \step[fieldset=venue, null]
+            \step[fieldset=eventdate, null]
+            \step[fieldset=eventtitle, null]
+            % do not show ISBN for proceedings
+            \step[fieldset=isbn, null]
+            % Citavi bug
+            \step[fieldset=volume, null]
+        }
+    }
+}
 
 % Backref package settings, pages with citations in bibliography
 \newcommand{\biblatexcitedntimes}{\autocap{c}ited \arabic{citecounter} times}
