Trimmed trailing white spaces and converted tabs to spaces
across project files

--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@
 % Uncomment the following line if you want to use other biblatex settings
 % \PassOptionsToPackage{style=numeric,repeatfields=true,backend=biber,backref=true,citecounter=true}{biblatex}
 \documentclass[
-\lang{english}{brazilian,brazil},
+\lang{english}{brazilian,brazil}, % https://tex.stackexchange.com/questions/484400/changing-the-cleveref-package-language-conjunction-definition
 12pt, % Padrão UFSC para versão final
 a4paper, % Padrão UFSC para versão final
 twoside, % Impressão nos dois lados da folha
